# template_test_seams

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu_cpp.yml
src/: hello_world.cpp  hello_world.hpp  hello_world_tmpl.hpp  hello_world_tmpl.ipp  main.cpp  test_file.cpp
